fix links stretching to fit

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -22,27 +22,8 @@ $govuk-assets-path: '/govuk/assets/';
 @import "components/stats";
 @import "components/wreck-images";
 @import "components/wreck-map";
+@import "components/header";
 
 .govuk-width-container {
   max-width: 1100px;
-}
-
-.app-header {
-  background-color: govuk-colour("black");
-  padding: govuk-spacing(3) 0;
-  nav {
-
-    display: grid;
-    grid-gap: govuk-spacing(9);
-    grid-template-columns: 200px auto;
-
-    a {
-      color: govuk-colour("white");
-      text-decoration: none;
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-
-  }
 }
